Worked on vorlesung12.tex

--- a/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
@@ -5,7 +5,7 @@ Um diese Aufgabe zu lösen, muss der sog.\ longest prefix match verwendet werden
 Dazu müssen die Routing-Tabellen-Einträge in eine binäre Darstellung überführt werden (die Netzwerk-Bits sind hier unterstrichen dargestellt):
 
 \begin{center}
-    \begin{tabular}{|c | c | c|}
+    \begin{tabular}{|c|l|c|}
         \hline
         Zieleintrag (CIDR) & Binärdarstellung & Zu nehmender Router \tabularnewline
         \hline
@@ -41,7 +41,7 @@ Bei scharfem Hinschauen sieht man, dass die ersten 2 Bytes in allen Routing-Eint
 Zunächst schreiben wir die Tabelle in Binärform (Netzwerk Bits sind unterstrichen):
 
 \begin{center}
-    \begin{tabular}{|c | c | c|}
+    \begin{tabular}{|c|l|c|}
         \hline
         Zieleintrag (CIDR) & Binärdarstellung & Next Hop \tabularnewline
         \hline
