--- a/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
@@ -162,7 +162,7 @@
         Problematisch ist auch die Byteordnung des Prozessors (Big/Little-Endian)
         \item Formal wird hier das verwendete Format beschrieben werden
         \begin{itemize}
-            \item Anstatt für jede Anwendung eine eigene Übertragungssyntax und -semantik zu definieren,
+            \item Anstatt für jede Anwendung eine eigene Übertragungssyntax und \-semantik zu definieren,
             stellt man hier eine allgemeingültige Lösung bereit
             \item Die spezifischen Daten eines Rechners werden hier eindeutig beschrieben
         \end{itemize}
@@ -237,52 +237,56 @@
 
 \minisec{Welche Unterschiede existieren zwischen dem ISO/OSI-Modell und dem Internet-Referenzmodell?}
 \bigbreak
-\begin{tabularx}{\textwidth}{|X|X|X|}
-    \hline
-    & ISO/OSI-Modell & Internet-Referenzmodell \tabularnewline
-    \hline
-    Alias & Open Systems Interconnection & Transmission Control Protocol (TCP) \tabularnewline
-    \hline
-    \# Schichten & 7 & 4 \tabularnewline
-    \hline
-    Zuverlässigkeit & & zuverlässiger als ISO/OSI \tabularnewline
-    \hline
-    Grenzen & streng & nicht sehr streng \tabularnewline
-    \hline
-    Ansatz & vertikal & horizontal \tabularnewline
-    \hline
-    – & verwendet verschiedene Session- und Präsentationsschichten & verwendet in der Anwendungsschicht sowohl die Session- als auch die Präsentationsschicht \tabularnewline
-    \hline
-    Kommunikation & Unterstützt auf der Netzwerkebene sowohl verbindungslose als auch verbindungsorientierte Kommunikation & bietet Unterstützung für die verbindungslose Kommunikation innerhalb der Netzwerkschicht \tabularnewline
-    \hline
-    Abhängigkeit & protokollunabhängig & protokollabhängig \tabularnewline
-    \hline
-\end{tabularx}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|}
+        \hline
+        & ISO/OSI-Modell & Internet-Referenzmodell \tabularnewline
+        \hline
+        Alias & Open Systems Interconnection & Transmission Control Protocol (TCP) \tabularnewline
+        \hline
+        \# Schichten & 7 & 4 \tabularnewline
+        \hline
+        Zuverlässigkeit & & zuverlässiger als ISO/OSI \tabularnewline
+        \hline
+        Grenzen & streng & nicht sehr streng \tabularnewline
+        \hline
+        Ansatz & vertikal & horizontal \tabularnewline
+        \hline
+        – & verwendet verschiedene Session- und Präsentationsschichten & verwendet in der Anwendungsschicht sowohl die Session- als auch die Präsentationsschicht \tabularnewline
+        \hline
+        Kommunikation & Unterstützt auf der Netzwerkebene sowohl verbindungslose als auch verbindungsorientierte Kommunikation & bietet Unterstützung für die verbindungslose Kommunikation innerhalb der Netzwerkschicht \tabularnewline
+        \hline
+        Abhängigkeit & protokollunabhängig & protokollabhängig \tabularnewline
+        \hline
+    \end{tabularx}
+\end{center}
 
 \minisec{Zu welcher Schicht gehören die Protokolle TCP und UDP, und wie unterscheiden sie sich?}
 Beide Protokolle gehören zur Schicht 4, der Transport-Schicht.
 \bigbreak
-\begin{tabularx}{\textwidth}{|X|X|X|}
-    \hline
-    & TCP & UDP \tabularnewline
-    \hline
-    Zuverlässigkeit & hoch & niedriger \tabularnewline
-    \hline
-    Geschwindigkeit & Niedriger & hoch \tabularnewline
-    \hline
-    Transfermethode & Pakete werden nacheinander zugestellt & Pakete werden im Datenstrom zugestellt \tabularnewline
-    \hline
-    Fehlererkennung und – behebung & ja & nein \tabularnewline
-    \hline
-    Congestion control & ja & nein \tabularnewline
-    \hline
-    Empfangsbestätigung & ja & nur die Prüfsumme \tabularnewline
-    \hline
-\end{tabularx}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|}
+        \hline
+        & TCP & UDP \tabularnewline
+        \hline
+        Zuverlässigkeit & hoch & niedriger \tabularnewline
+        \hline
+        Geschwindigkeit & niedriger & hoch \tabularnewline
+        \hline
+        Transfermethode & Pakete werden nacheinander zugestellt & Pakete werden im Datenstrom zugestellt \tabularnewline
+        \hline
+        Fehlererkennung und – behebung & ja & nein \tabularnewline
+        \hline
+        Congestion control & ja & nein \tabularnewline
+        \hline
+        Empfangsbestätigung & ja & nur die Prüfsumme \tabularnewline
+        \hline
+    \end{tabularx}
+\end{center}
 
 \minisec{Welche Vorteile hat es (bzw. warum ist es notwendig), die Host-to-Network-Schicht komplett in Hardware zu realisieren?}
 \begin{itemize}
-    \item Idee: die faktische Datenübertragung wird von der Netzwerkkarte des Rechners erledigt
+    \item Idee: Die faktische Datenübertragung wird von der Netzwerkkarte des Rechners erledigt
     \begin{itemize}
         \item Vorteil bei Multi-Access-Netzen: Die Netzwerkkarte kann selber entscheiden, ob die Daten für den eigenen Rechner sind
         → Entlastung des Betriebssystems (da kein Interrupt notwendig)
